# HSC2

./: .gitignore  README.md  demo.html  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: classifier.py
backend/data/taric/: .gitignore  turbovec_index_meta.json
backend/data/taric/bm25s_index/: corpus_meta.json  indptr.csc.index.npy  params.index.json  vocab.index.json
backend/db/: 001_initial.sql  models.py  queries.py  session.py
backend/eval/: bench_bti.py
backend/graph/: taric_tree.py
backend/ingestion/: build_indexes.py  fetch_full_taric.py  generate_embeddings.py  ingest_bti.py  ingest_full_taric.py  parse_cn2026_pdf.py
backend/reasoning/: hs10_suggester.py  hs6_selector.py  llm.py  schemas.py
backend/retrieval/: __init__.py  bm25_index.py  embedder.py  expansion.py  hybrid.py  narrowing.py  reranker.py  turbovec_index.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/classify/: page.tsx
frontend/app/classify/components/: CodeSpine.tsx  StepCorridor.tsx  StepDescription.tsx  StepHS6.tsx  StepNarrowing.tsx  StepResult.tsx
frontend/lib/: api.ts
