[project]
name = "taric-classifier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",
    "httpx",
    "openai",
    "bm25s",
    "turbovec",
    "networkx",
    "pandas",
    "openpyxl",
    "numpy",
    "scipy",
    "transformers",
    "torch",
    "sentencepiece",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"